# primeapp

./: CMakeLists.txt  README.md  main.cc  vecutil.cc
fastmul/: CMakeLists.txt  karatsubaMul.cc  karatsubaMul.cc~  ntt.cc  ntt.cc~  ntt.hh  ntt.hh~  ntt_old.cc1  primitive.cc  primitive.hh  ssaMul.cc  ssaMul.cc~  ssaMul_old.cc  vecutil.cc  vecutil.hh
fastmuldec/: CMakeLists.txt  fastmul.cc  utils.cc  utils.hh
primeArray/: CMakeLists.txt  main.cc  mersenneprint.cc  mulv2.cc  numberSquare.cc  veclibv2.cc  veclibv2.hh  vecutil.hh
savedResults/: n1398269.txt  nprime.txt  nprime8191.txt  p86243.txt  prime107.txt  prime110503.txt  prime13.txt  prime2203.txt  prime2207.txt  prime2976221.txt  prime31.txt  prime44497.txt  prime61.txt  prime89.txt
