cmake_minimum_required(VERSION 3.5)
project(fastMul)
file(GLOB karSrc ${PROJECT_SOURCE_DIR}/karatsubaMul.cc ${PROJECT_SOURCE_DIR}/vecutil.*)
file(GLOB ssaSrc ${PROJECT_SOURCE_DIR}/ssaMul.cc ${PROJECT_SOURCE_DIR}/vecutil.*)
file(GLOB primSrc ${PROJECT_SOURCE_DIR}/primitive.*)
file(GLOB nttSrc ${PROJECT_SOURCE_DIR}/ntt.*)
add_executable(karatsuba ${karSrc})
add_executable(ssa ${ssaSrc} ${primSrc} ${nttSrc})
set(CMAKE_CXX_FLAGS "-g -std=c++14 -pthread -O3 -fopenmp -mcmodel=large")
