cmake_minimum_required(VERSION 2.8)
project(primeArray)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
file(GLOB mainSrc ${PROJECT_SOURCE_DIR}/main.cc)
file(GLOB utils ${PROJECT_SOURCE_DIR}/vecutil.*)
file(GLOB veclibv2 ${PROJECT_SOURCE_DIR}/veclibv2.*)
file(GLOB mersenne ${PROJECT_SOURCE_DIR}/mersenneprint.cc)
file(GLOB newMul ${PROJECT_SOURCE_DIR}/mulv2.cc)
add_executable(mprint ${mersenne} ${utils})
add_executable(${PROJECT_NAME} ${mainSrc} ${utils})
add_executable(mulv2 ${newMul} ${veclibv2})
set(CMAKE_CXX_FLAGS "-mcmodel=medium -std=c++14 -pthread -O3 -g -fopenmp")